build the structure for the main page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
+    
     <body>
+        <nav>
+            <button><a>Images</a></button>
+            <button><a>Advanced Search</a></button>
+        </nav>
+        <img src="assets/google_image.png">
         <form action="https://google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
