--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         
             <form action="https://google.com/search">
                 <input type="text" name="q" required>
-                <input type="submit" value="Google Search">
+                <div class="submit-btns">
+                    <input type="submit" value="Google Search">
+                    <input type="submit" value="I'm Feeling Lucky">
+                </div>
             </form>
         </div>
     </body>
